@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170829"
-#define public MagickPackageReleaseDate "snapshot-20170829"
+#define public MagickPackageVersionAddendum ".020170830"
+#define public MagickPackageReleaseDate "snapshot-20170830"
